yamls/jaeger/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tracing-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-tracing
        protocol: HTTP
      hosts:
        - tracing.jtthink.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-gateway-vs
  namespace: istio-system
spec:
  hosts:
    - tracing.jtthink.com
  gateways:
    - tracing-gateway
  http:
    - route:
        - destination:
            host: tracing
            port:
              number: 80
